# monad-metrics

./: .gitignore  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  monad-metrics.cabal  stack-lts2.yaml  stack.yaml
.github/workflows/: haskell.yml
bench/: Map.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-9.6.3/: monad-metrics-0.2.2.0-inplace.conf  package.cache
scripts/: upload-package.hs
src/Control/Monad/: Metrics.hs
src/Control/Monad/Metrics/: Internal.hs
src/Control/Monad/Metrics/Instances/: IO.hs
