name:                monad-metrics
version:             0.2.0.0
synopsis:            A convenient wrapper around EKG metrics
description:         A convenient wrapper for collecting application metrics. Please see the README.md for more information.
homepage:            https://github.com/sellerlabs/monad-metrics#readme
license:             MIT
license-file:        LICENSE
author:              Matthew Parsons
maintainer:          matt@sellerlabs.com
copyright:           2017 Seller Labs, 2016 Taylor Fausak
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Control.Monad.Metrics
                     , Control.Monad.Metrics.Internal
  build-depends:       base                 >= 4.7     && < 5
                     , clock                >= 0.3     && < 0.8
                     , ekg-core             >= 0.1.0.1 && < 0.2
                     , hashable             >= 1.2     && < 1.3
                     , text                               < 1.3
                     , mtl                  >= 2       && < 2.3
                     , transformers         >= 0.3     && < 0.6
                     , unordered-containers >= 0.2     && < 0.3
                     , microlens            >= 0.2     && < 0.5
  default-language:    Haskell2010

test-suite monad-metrics-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base             >= 4.6 && <= 5.0
                     , monad-metrics
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/sellerlabs/monad-metrics
